Git_WGBH_QC/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>MinContribution__c</fullName>
        <description>Minimum Contribution</description>
        <label>Min Contribution</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Giving_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Giving Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One2OneContact__c</fullName>
        <label>_SYSTEM: One2OneContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Link_Name__c</fullName>
        <formula>Owner_Link__r.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Link Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Link__c</fullName>
        <label>Owner Link</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts31</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PBS_Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box to limits calls for Auction Items</inlineHelpText>
        <label>PBS Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <label>Preferred Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_ACCOUNT_ID__c</fullName>
        <description>roundCause ID</description>
        <displayFormat>A{000000000}</displayFormat>
        <label>Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>STS__c</fullName>
        <description>TA Status</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SYSTEMIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>_SYSTEM: IsIndividual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SYSTEM_AccountType__c</fullName>
        <inlineHelpText>System field: do not use or change.</inlineHelpText>
        <label>_SYSTEM: AccountType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_ID__c</fullName>
        <inlineHelpText>Salesforce ID which could be the same as the old Team Approach system ID</inlineHelpText>
        <label>Salesforce ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <label>Account Manager/Staff</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the account is the Station&apos;s Anonymous account.  Can be used in selects, not viewable by users.</description>
        <label>Station Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TA_Account_ID__c</fullName>
        <formula>TEXT(TaAccountId__c)</formula>
        <label>Legacy Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaAccountId__c</fullName>
        <description>TA Account Id</description>
        <label>TA Account Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Code__c</fullName>
        <label>Termination Code</label>
        <picklist>
            <picklistValues>
                <fullName>All names deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved out of area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phony account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UndeliverableCount__c</fullName>
        <description>TA Undeliverable mail count</description>
        <label>Undeliverable Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueID__c</fullName>
        <label>UniqueID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WCAI_Major_Donor_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WCAI Annual Major</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WCAI_Major_Gifts_Status__c</fullName>
        <label>WCAI Major Gifts Status</label>
        <picklist>
            <picklistValues>
                <fullName>Major Gifts Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WGBH_Major_Donor_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WGBH Ralph Lowell Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WGBH_Major_Gifts_Status__c</fullName>
        <label>WGBH Major Gifts Status</label>
        <picklist>
            <picklistValues>
                <fullName>Major Gifts Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WGBY_Major_Donor_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WGBY Murrow Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WGBY_Major_Gifts_Status__c</fullName>
        <label>WGBY Major Gifts Status</label>
        <picklist>
            <picklistValues>
                <fullName>Major Gifts Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WHCDB_Days_since_last_update_or_activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last update or activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warning_Note__c</fullName>
        <description>Warning area to add details everyone should be aware of.</description>
        <inlineHelpText>Warning, description regarding information on the organization or foundation, if you wish to remove an old warning, copy and paste it into a note on on the organization.</inlineHelpText>
        <label>Warning Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Warning_Text__c</fullName>
        <description>Warning text field. Formatted as rich text.</description>
        <label>Warning</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <label>Warning</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Years_on_file__c</fullName>
        <formula>YEAR(TODAY()) - YEAR( Acquired_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years on File</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alt_account_id__c</fullName>
        <label>Alternate Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ETL migration process</description>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ta_homephone_id__c</fullName>
        <label>Ta HomePhone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ta_workphone_id__c</fullName>
        <label>Ta WorkPhone Id for update</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Account_Manager_for_MMI</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>MMI_Account_Manager__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>MMI_Staff__c</columns>
        <columns>Benefit_Level_Package__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TA_Account_ID__c</columns>
        <columns>LastDonationDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MMI_Account_Manager__c</field>
            <operation>contains</operation>
            <value>Sandy Chin,Yuri Stern</value>
        </filters>
        <label>Account Manager for MMI</label>
        <sharedTo>
            <groups>WGBH Member Marketing Initiatives</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>TA_Account_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>Member_Discount_Offer__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>STS__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>LastDonationDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Account/Corp</label>
    </listViews>
    <listViews>
        <fullName>All_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>TA_Account_ID__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organization</value>
        </filters>
        <label>All Organizations</label>
    </listViews>
    <listViews>
        <fullName>MGOACCOUNTS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>TA_Account_ID__c</columns>
        <columns>STS__c</columns>
        <columns>SFDC_ACCOUNT_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Household</value>
        </filters>
        <filters>
            <field>Warning_Note__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Accounts with MGO populated</label>
    </listViews>
    <listViews>
        <fullName>Member_Discount_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Member_Discount_Offer__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Industry_Category__c</columns>
        <columns>MMI_Account_Manager__c</columns>
        <columns>MMI_Staff__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Member_Discount_Offer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Member Discount Organizations</label>
        <sharedTo>
            <roles>Director Member Marketing Initiatives</roles>
            <roles>Manager Member Marketing Initiatives</roles>
            <roles>User Member Marketing Initiative</roles>
            <roles>WGBH Sys Admin</roles>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Accounts1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Household_Email__c</columns>
        <columns>TA_Account_ID__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>STS__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Household</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>TaAccountId__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>New_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>TA_Account_ID__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organization</value>
        </filters>
        <label>My Organizations</label>
    </listViews>
    <listViews>
        <fullName>RenewalAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Household_Email__c</columns>
        <columns>TA_Account_ID__c</columns>
        <columns>Preferred_Address__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>STS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Household</value>
        </filters>
        <filters>
            <field>TaAccountId__c</field>
            <operation>equals</operation>
            <value>192776,192801,192868,192892,192897,192905,192937,192971,192986,193017,193037,193</value>
        </filters>
        <label>All Renewal Households</label>
    </listViews>
    <namedFilters>
        <fullName>Opportunity_00NQ0000000YkPVMA0</fullName>
        <active>false</active>
        <field>Opportunity.Matching_Company__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Opportunity_Matching Company</name>
    </namedFilters>
    <recordTypes>
        <fullName>Corporation</fullName>
        <active>true</active>
        <label>Corporation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Foundation</fullName>
        <active>true</active>
        <label>Foundation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Government</fullName>
        <active>true</active>
        <label>Government</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <label>Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Schools, NonProfits, Librarys, Stations</description>
        <label>Other</label>
    </recordTypes>
</CustomObject>